--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Image classification.
+image-classification/cifar-10-batches-py
+image-classification/*.p
+image-classification/cifar-10-python.tar.gz
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -99,3 +104,4 @@ ENV/
 
 # mypy
 .mypy_cache/
+
